--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,6 @@ font-family: 'Roboto', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
 
-body{
-    overflow-x: hidden;
-}
-
 :root{
     --bg-color: rgba(255,255,255,0.9);
     --bg-color2: rgba(255,255,255, 0.6);
@@ -24,6 +20,8 @@ body{
 body{
     background-color: var(--bg-color);
     color: var(--main-color);
+    overflow-x: hidden;
+    transition: background-color 1s ease-in-out;
 }
 
 .heading{
